로컬 작업 내용