@@ -37,8 +37,6 @@ public class ArgotsService {
     // description으로 조회
     public List<Argot> getArgotByDescription(String desc) { return argotsRepository.findByDescription(desc); }
 
-
-
     /*
     // count 많은 순으로 조회
     public List<Argot> getSlangsSortedByCount() {
@@ -47,13 +45,22 @@ public class ArgotsService {
 
      */
 
-    // DB에서 slang 리스트로 받아오기
-    public List<String> getAllArgotsToList() {
+    // DB에서 slang 리스트로 받아오기 (t.me)
+    public List<String> getAllArgotsToListWtme() {
         return argotsRepository.findAll() // DB에서 전체 조회
                 .stream()
                 .map(Argot::getArgot) // argot 필드만 추출
                 .filter(argot -> argot != null) // argot이 null이 아닌 경우만
                 .map(argot -> "t.me " + argot) // 각 argot 앞에 t.me 추가
-                .collect(Collectors.toList()); // 리스트로 변환
+                .toList(); // 리스트로 변환
+    }
+
+    // DB에서 slang 리스트로 받아오기
+    public List<String> getAllArgotsToList() {
+        return argotsRepository.findAll()
+                .stream()
+                .map(Argot::getArgot)
+                .filter(argot -> argot != null)
+                .toList();
     }
 }
